--- a/fe_yolo/styles/globals.css
+++ b/fe_yolo/styles/globals.css
@@ -3,6 +3,15 @@
 @tailwind utilities;
 
 .img-container {
-    width: 632px;
-    height: 355px;
+    width: 550px;
+    height: 325px;
+    object-fit: cover;
+}
+
+.img-zoom {
+    /*width: 1024px;*/
+    /*height: calc(1024px / 550 * 325);*/
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
